--- a/index.html
+++ b/index.html
@@ -6,72 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Login - MCU</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans"> -->
     <link rel="stylesheet" href="assets/css/loginStyles.css">
 </head>
 
 <body class="bg-gradient">
-    <div class="background">
+    <!-- NAVBAR -->
+    <nav class="navbar sticky-top navbar-bs">
+        <div class="container">
+            <a class="navbar-brand" href="dashboard.html">
+                <img src="assets/img/logo_maranatha.png" width="150" alt="">
+            </a>
+        </div>
+    </nav>
 
-        <!-- NAVBAR -->
-        <nav class="navbar sticky-top navbar-bs">
-            <div class="container">
-                <a class="navbar-brand" href="dashboard.html">
-                    <img src="assets/img/logo_maranatha.png" width="150" alt="">
-                </a>
-            </div>
-        </nav>
-
-        <!-- CONTENT -->
-        <div class="container-fluid padding container-card-login-form">
-            <div class="container p-0">
-                <div class="row padding">
-                    <div class="col-xs-12 col-sm-6 col-info">
-                        <div class="info-description">
-                            Informasi lengkap mengenai Penerimaan Mahasiswa Baru dapat dilihat di bawah
-                            ini.
-                        </div>
-                        <div id="bannerCarousel" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <li data-target="#bannerCarousel" data-slide-to="0" class="active"></li>
-                                <li data-target="#bannerCarousel" data-slide-to="1"></li>
-                            </ol>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img class="d-block w-100" src="assets/img/banner_pmb.jpg" alt="First slide">
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/img/banner_pmb2.jpg" alt="Second slide">
-                                </div>
-                            </div>
-                            <a class="btn btn-info btn-sm" href="http://www.maranatha.edu/admission/">INFO</a>
-                        </div>
+    <!-- CONTENT -->
+    <div class="container-fluid padding container-card">
+        <div class="container p-0">
+            <div class="row padding">
+                <div class="col-xs-12 col-sm-6 col-info">
+                    <div class="info-description">
+                        Informasi lengkap mengenai Penerimaan Mahasiswa Baru dapat dilihat di bawah
+                        ini.
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-form">
-                        <div class="container-col-form">
-                            <div class="text-center">
-                                <p class="form-title">Penerimaan Mahasiswa Baru</p>
-                                <p class="text-dark form-text">Belum punya akun?
-                                    <a class="form-link" href="">Daftar disini.</a>
-                                </p>
+                    <div id="bannerCarousel" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#bannerCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#bannerCarousel" data-slide-to="1"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="assets/img/banner_pmb.jpg" alt="First slide">
                             </div>
-                            <hr>
-                            <div class="form-group">
-                                <label for="email">Email Address</label>
-                                <input type="email" class="form-control" id="email">
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="assets/img/banner_pmb2.jpg" alt="Second slide">
                             </div>
-                            <div class="form-group">
-                                <label for="password">Password</label>
-                                <input type="password" class="form-control" id="password">
-                            </div>
-                            <div class="form-group">
-                                <button class="btn btn-primary btn-block btn-login"
-                                    onclick="location.href='dashboard.html'">LOGIN</button>
-                            </div>
-                            <hr>
-                            <div class="text-center text-forgot-pass">
-                                <a href="">FORGOT PASSWORD</a>
-                            </div>
+                        </div>
+                        <a class="btn btn-info btn-sm" href="http://www.maranatha.edu/admission/">INFO</a>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-form">
+                    <div class="container-col-form">
+                        <div class="text-center">
+                            <p class="form-title">Penerimaan Mahasiswa Baru</p>
+                            <p class="text-dark form-text">Belum punya akun?
+                                <a class="form-link" href="">Daftar disini.</a>
+                            </p>
+                        </div>
+                        <hr>
+                        <div class="form-group">
+                            <label for="email">Email Address</label>
+                            <input type="email" class="form-control" id="email">
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input type="password" class="form-control" id="password">
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-primary btn-block btn-login"
+                                onclick="location.href='dashboard.html'">LOGIN</button>
+                        </div>
+                        <hr>
+                        <div class="text-center text-forgot-pass">
+                            <a href="">FORGOT PASSWORD</a>
                         </div>
                     </div>
                 </div>
@@ -79,6 +75,7 @@
         </div>
     </div>
 
+    <!-- FOOTER -->
     <footer class="footer text-center">
         <div class="container">
             © 2020 Universitas Kristen Maranatha
@@ -87,7 +84,6 @@
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-
     <script type="text/javascript">
         $('.carousel').carousel({
             interval: 5000
